[gd_scene load_steps=4 format=3 uid="uid://nlse46bhaooq"]

[ext_resource type="Script" path="res://src/characters/encounter.gd" id="1_ht1a0"]
[ext_resource type="Texture2D" uid="uid://ctnawnjqtoylk" path="res://icon.svg" id="3_xr4ik"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6l4ry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xr4ik")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Encounter" type="Node2D"]
script = ExtResource("1_ht1a0")

[node name="EncounterUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 144.0
offset_bottom = 144.0

[node name="EncounterText" type="RichTextLabel" parent="EncounterUI"]
layout_mode = 0
offset_left = 8.0
offset_right = 312.0
offset_bottom = 192.0
text = "Something is happening."
metadata/_edit_group_ = true

[node name="EncounterBG" type="ColorRect" parent="EncounterUI/EncounterText"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.25098, 1)

[node name="EncounterChoice1" type="Button" parent="EncounterUI"]
layout_mode = 0
offset_left = 16.0
offset_top = 208.0
offset_right = 304.0
offset_bottom = 240.0
text = "Do something"

[node name="EncounterChoice2" type="Button" parent="EncounterUI"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 256.0
offset_right = 304.0
offset_bottom = 288.0
text = "Do something else"

[node name="EncounterChoice3" type="Button" parent="EncounterUI"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 304.0
offset_right = 304.0
offset_bottom = 336.0
text = "Don't do anything"

[node name="EncounterSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 64)
sprite_frames = SubResource("SpriteFrames_6l4ry")

[node name="EncounterHover" type="Control" parent="EncounterSprite"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="EncounterUI/EncounterChoice1" to="." method="_on_encounter_choice_1_mouse_entered"]
[connection signal="mouse_exited" from="EncounterUI/EncounterChoice1" to="." method="_general_mouse_exited"]
[connection signal="pressed" from="EncounterUI/EncounterChoice1" to="." method="_on_encounter_choice_1_pressed"]
[connection signal="mouse_entered" from="EncounterUI/EncounterChoice2" to="." method="_on_encounter_choice_2_mouse_entered"]
[connection signal="mouse_exited" from="EncounterUI/EncounterChoice2" to="." method="_general_mouse_exited"]
[connection signal="pressed" from="EncounterUI/EncounterChoice2" to="." method="_on_encounter_choice_2_pressed"]
[connection signal="mouse_entered" from="EncounterUI/EncounterChoice3" to="." method="_on_encounter_choice_3_mouse_entered"]
[connection signal="mouse_exited" from="EncounterUI/EncounterChoice3" to="." method="_general_mouse_exited"]
[connection signal="pressed" from="EncounterUI/EncounterChoice3" to="." method="_on_encounter_choice_3_pressed"]
[connection signal="mouse_entered" from="EncounterSprite/EncounterHover" to="." method="_on_encounter_hover_mouse_entered"]
[connection signal="mouse_exited" from="EncounterSprite/EncounterHover" to="." method="_general_mouse_exited"]
